Trivial test related refactoring
(cherry picked from commit 97f73d5488621234e3e2de6332cf4a6c91381097)